hw-13/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hw-13
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
    app: flask
