hw-13/k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: hw-13
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: isbelevtsov/hw-11:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
      #     volumeMounts:
      #       - name: flask-volume
      #         mountPath: /app/app.py
      #         subPath: app.py
      # volumes:
      #   - name: flask-volume
      #     configMap:
      #       name: flask
