hw-13/k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: hw-13
spec:
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
