hw-13/k8s/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask
  namespace: hw-13
spec:
  ingressClassName: cilium
  rules:
    - host: flask.elysium-space.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask
                port:
                  number: 5000
