hw-13/k8s/mysql-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mysql-network-policy
  namespace: hw-13
spec:
  endpointSelector:
    matchLabels:
      app: mysql
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: flask
            io.kubernetes.pod.namespace: hw-13
    - fromEndpoints:
        - matchLabels:
            app: flask
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
